# Deep-Picker-Project

./: .gitignore  DeepPicker_DataScraping.ipynb  DeepPicker_PreProcessing.ipynb  README.md  all-in-one.yaml  clusterissuer.yaml  docker-compose.yml  metallb-pool.yaml  package-lock.json  package.json  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/backend/: Dockerfile  create_admin_user.py  main.py  pyproject.toml  requirements.txt
app/backend/config/: .constants.py.un~  constants.py  constants.py~  database.py  player_headshots.json
app/backend/controllers/: player_controller.py  user_controller.py
app/backend/models/: user_model.py
app/backend/routes/: auth_routes.py  player_routes.py  user_routes.py
app/backend/schemas/: player_schema.py  user_schema.py
app/backend/services/: auth_services.py  player_services.py  user_services.py
app/config/: database.py
app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  server.js  vite.config.js
app/routes/: user_routes.py
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
k8s/: frontend-ingress.yaml  frontend-service.yaml
model/: Copy_of_DeepPicker_preprocess_with_model.ipynb  DataScraping.ipynb  DeepPicker_PreProcessing_and_Model.ipynb  Inference.ipynb  PreProcessing.ipynb  nba_team_predictor_model.keras  x_scaler.pkl  y_scaler.pkl
src/: .App.jsx.un~  App.css  App.css~  App.jsx
src/components/: .ChemistryScore.jsx.un~  .RecommendedPlayers.jsx.un~  .SearchPlayers.jsx.un~  Bench.css  Bench.jsx  ChemistryScore.jsx  (+3 more)
(+42 files in other folders)
